Add relative paths

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/styles/styles.css" />
+    <link rel="stylesheet" href="./public/styles/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -25,7 +25,7 @@
     <main>
       <section>
         <img
-          src="/public/img/portada.png"
+          src="./public/img/portada.png"
           alt="imagen de portada de zara"
           class="max-width"
         />
@@ -46,17 +46,17 @@
         </div>
         <div class="grid-c-3 gap-50 mt-50">
           <img
-            src="/public/img/mision_1.png"
+            src="./public/img/mision_1.png"
             alt="imagen mision 1"
             class="max-width"
           />
           <img
-            src="/public/img/mision_2.png"
+            src="./public/img/mision_2.png"
             alt="imagen mision 2"
             class="max-width"
           />
           <img
-            src="/public/img/mision_3.png"
+            src="./public/img/mision_3.png"
             alt="imagen mision 3"
             class="max-width"
           />
@@ -76,12 +76,12 @@
         </div>
         <div class="flex column gap-50">
           <img
-            src="/public/img/historia_1.png"
+            src="./public/img/historia_1.png"
             alt="historia 1"
             class="max-width"
           />
           <img
-            src="/public/img/historia_2.png"
+            src="./public/img/historia_2.png"
             alt="historia 2"
             class="max-width"
           />
